GNOME Bugzilla – Bug 765706
opusdec: caps leak in gst_opus_dec_negotiate()
Last modified: 2016-04-28 08:27:57 UTC
The caps returned by gst_pad_get_allowed_caps() is leaked.
Created attachment 326916 [details] [review] opusdec: fix caps leaks The caps returned by gst_pad_get_allowed_caps() was leaked.
Thanks: commit 8d6e315b012a8c7bc2ac92e3127409d412eb8738 Author: Guillaume Desmottes <guillaume.desmottes@collabora.co.uk> Date: Thu Apr 28 09:59:25 2016 +0300 opusdec: fix caps leaks The caps returned by gst_pad_get_allowed_caps() was leaked. https://bugzilla.gnome.org/show_bug.cgi?id=765706